# aiecommerce-agents

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile.dev  README.md  TESTING.md  docker-compose.yml  main.py  prd.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: feature-planner.agent.md  prd.agent.md
.github/instructions/: python.instructions.md
.github/workflows/: ci.yml
docker/: init-db.sql
plans/: phase-1-foundation-tower-assembly.md
scripts/: _test_utils.py  sentinel.py  test_step0_healthcheck.py  test_step1_product_api.py  test_step2_tower_assembly.py  test_step3_bundle_creation.py  test_step4_creative_assets.py  test_step5_ml_publish.py  test_step6_full_pipeline.py
src/orchestrator/: __init__.py  main.py
src/orchestrator/api/: __init__.py
src/orchestrator/api/routes/: __init__.py  bundles.py  health.py  towers.py  triggers.py
src/orchestrator/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
src/orchestrator/graph/: __init__.py  llm.py  state.py  workflow.py
src/orchestrator/graph/nodes/: bundle_creator.py  channel_manager.py  creative_director.py  inventory_architect.py
src/orchestrator/models/: __init__.py  base.py  bundle.py  component_audit.py  creative_asset.py  tower.py
src/orchestrator/schemas/: __init__.py  bundle.py  category_mapping.py  common.py  inventory.py  media.py  mercadolibre.py  product.py  tower.py
src/orchestrator/services/: __init__.py  aiecommerce.py  bundle_hash.py  bundle_repository.py  compatibility.py  component_audit_repository.py  creative_asset_repository.py  gemini_media.py  listing_content.py  media_compliance.py  media_protocol.py  mercadolibre.py  peripheral_rules.py  peripheral_selector.py  pricing.py  prompt_engine.py  tower_repository.py  uniqueness.py
tests/: conftest.py  factories.py  test_main.py
tests/test_api/: __init__.py  conftest.py  test_bundles.py  test_towers.py  test_triggers.py
tests/test_core/: __init__.py  test_config.py  test_database.py  test_exceptions.py  test_security.py
tests/test_graph/: test_bundle_creator.py  test_channel_manager.py  test_creative_director.py  test_inventory_architect.py  test_llm.py  test_state.py  test_workflow.py
tests/test_integration/: __init__.py  conftest.py  test_assembly_pipeline.py
tests/test_models/: __init__.py  conftest.py  test_bundle.py  test_component_audit.py  test_creative_asset.py  test_tower.py
tests/test_schemas/: test_bundle_schema.py  test_category_mapping.py  test_inventory.py  test_media.py  test_mercadolibre.py  test_product.py  test_tower_schema.py
tests/test_services/: __init__.py  conftest.py  test_aiecommerce.py  test_bundle_hash.py  test_bundle_repository.py  test_compatibility.py  test_component_audit_repository.py  test_creative_asset_repository.py  test_gemini_media.py  test_listing_content.py  test_media_compliance.py  test_media_protocol.py  test_mercadolibre.py  test_peripheral_rules.py  test_peripheral_selector.py  test_pricing.py  test_prompt_engine.py  test_tower_repository.py  test_uniqueness.py
